<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/details"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_marginTop="2dp"
    android:alpha="0"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/CardViewPlayStore">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingTop="20dp"
        android:paddingEnd="16dp"
        android:paddingBottom="24dp">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:cardElevation="8dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="24dp">

                <ImageView
                    android:id="@+id/ic_formation"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toStartOf="@id/formationTitle"
                    app:layout_constraintHorizontal_bias="0"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_formation" />

                <TextView
                    android:id="@+id/formationTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/formation"
                    android:textColor="#000"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/ic_formation"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/formationDetail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:ellipsize="end"
                    android:lineSpacingExtra="4dp"
                    android:maxLines="10"
                    android:text="@string/formationDetails"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/formationTitle" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:cardElevation="8dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="24dp">

                <ImageView
                    android:id="@+id/ic_experience"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toStartOf="@id/experienceTitle"
                    app:layout_constraintHorizontal_bias="0"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_user_tie" />

                <TextView
                    android:id="@+id/experienceTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/experience"
                    android:textColor="#000"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/ic_experience"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/experienceDetails"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:ellipsize="end"
                    android:lineSpacingExtra="4dp"
                    android:text="@string/experienceDetails"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/experienceTitle" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:cardElevation="8dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="24dp">

                <ImageView
                    android:id="@+id/ic_experience2"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toStartOf="@id/projectTitle"
                    app:layout_constraintHorizontal_bias="0"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_experience" />

                <TextView
                    android:id="@+id/projectTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/project"
                    android:textColor="#000"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/ic_experience2"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/projectDetails"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:ellipsize="end"
                    android:lineSpacingExtra="4dp"
                    android:text="@string/projectDetails"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/projectTitle" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:cardElevation="8dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="24dp">

                <ImageView
                    android:id="@+id/ic_competence"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toStartOf="@id/competenceTitle"
                    app:layout_constraintHorizontal_bias="0"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_competence" />

                <TextView
                    android:id="@+id/competenceTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/competence"
                    android:textColor="#000"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/ic_competence"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/competenceDetails"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:ellipsize="end"
                    android:lineSpacingExtra="4dp"
                    android:text="@string/competenceDetails"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/competenceTitle" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="32dp"
            app:cardElevation="8dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="24dp">

                <ImageView
                    android:id="@+id/ic_interest"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toStartOf="@id/interestTitle"
                    app:layout_constraintHorizontal_bias="0"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_interest" />

                <TextView
                    android:id="@+id/interestTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/interests"
                    android:textColor="#000"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/ic_interest"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/interestDetails"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:ellipsize="end"
                    android:lineSpacingExtra="4dp"
                    android:maxLines="10"
                    android:text="@string/interestDetails"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/interestTitle" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

</ScrollView>